<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_appbar">

        <include layout="@layout/app_bar"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/rl_appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/rl1">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registered_mobile_no"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"/>

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_1"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_shape"
                    android:gravity="center"
                    android:text="@string/send_reset_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_2"
                    android:layout_below="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/otp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/gray"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>



            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/rl2"
            android:layout_below="@+id/rl1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_4"
                android:layout_below="@+id/input_3"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_below="@+id/input_4"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:text="Reset Password"
                android:textColor="@color/white"
                android:background="@drawable/btn_shape"
                android:textAllCaps="false"/>

        </RelativeLayout>


        </RelativeLayout>



    </androidx.core.widget.NestedScrollView>


</RelativeLayout>